--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
-- barre de progression du temps
 - charger un fichier en local
 - design item
+- add drag and drop
+- fix current time d'une track
+- ajouter peer-to-peer
