--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,15 @@
-- orienter les échanges
-- partage de l'ordre de la playlist
+- partage de l'ordre de la playlist et du status
 - envoyer plusieurs fichiers
 - bloc parametre
 - générer qrcode
 - design item
+- afficher progression du transfert
 - design playlist
 - move item par le coté
 - personaliser contributor
 - faire les blocs modulables
+
 - local storage de la playlist et des infos contributor
 - fix : ne lis pas les fichiers sur mobile
+- https
+- gérer si plusieurs owner à la première connexion -> ? (la blockchain !)
