share order of playlist

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-- partage de l'ordre de la playlist et du status
+- partage du status de la track (play / pause)
 - envoyer plusieurs fichiers
 - bloc parametre
 - générer qrcode
@@ -11,5 +11,6 @@
 
 - local storage de la playlist et des infos contributor
 - fix : ne lis pas les fichiers sur mobile
+- passer sous webpack pour babel
 - https
 - gérer si plusieurs owner à la première connexion -> ? (la blockchain !)
