--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,10 @@
-- design item
-- afficher progression du transfert
-- design playlist
+- playlist qui défile
 - bloc parametre
 - générer qrcode
-- move item par le coté
 - personaliser contributor
 - faire les blocs modulables
+
+- fix : search : suggestion start good index (ex wriggles -> suggest = the wriggles)
 
 - local storage de la playlist et des infos contributor
 - fix : ne lis pas les fichiers sur mobile
