--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,6 @@
-- playlist qui défile
 - bloc parametre
 - générer qrcode
-- personaliser contributor
+- personaliser contributor (tinygraph)
 - faire les blocs modulables
 
 - fix : search : suggestion start good index (ex wriggles -> suggest = the wriggles)
